@@ -25,11 +25,12 @@
     }
   ],
   "replace": {
-    "jambagecom/static-info-tables-de": "self.version"
+    "typo3-ter/static-info-tables-de": "self.version"
   },
   "require": {
-    "typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5",
-    "sjbr/static-info-tables": "^6.7 || ^11.5"
+    "typo3/cms-core": "^10.4 || ^11.5",
+    "sjbr/static-info-tables": "^6.7 || ^11.5",
+    "jambagecom/addons-em": "^0.5"
   },
   "extra": {
     "typo3/cms": {
