@@ -4,7 +4,7 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Static Info Tables (de]',
     'description' => 'German (de] language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
     'category' => 'misc',
-    'version' => '6.7.10',
+    'version' => '6.7.11',
     'state' => 'stable',
     'clearcacheonload' => 1,
     'author' => 'Franz Holzinger',
@@ -12,8 +12,9 @@ $EM_CONF[$_EXTKEY] = [
     'author_company' => 'jambage.com',
     'constraints' => [
         'depends' => [
-            'typo3' => '8.7.0-11.5.99',
+            'typo3' => '10.4.0-11.5.99',
             'static_info_tables' => '6.7.3-11.5.99',
+            'addons_em' => '0.5.0-0.5.99',
         ],
         'conflicts' => [
         ],
